objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Running</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Account__c</fullName>
        <label>Contact Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_PO__c</fullName>
        <label>Customer&apos;s PO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <formula>CASE(Case__r.Asset.Manufacturer__c, &apos;Mori Seiki&apos;,&apos;Mori Seiki&apos;, &apos;No Data&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Case__r.Asset.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Training-New Machine</fullName>
                </value>
                <value>
                    <fullName>Product Inspection</fullName>
                </value>
                <value>
                    <fullName>Preventative Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parts_Warranty_Date__c</fullName>
        <formula>Case__r.Asset.Parts_Warranty_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts Warranty Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - High</fullName>
                </value>
                <value>
                    <fullName>2 - Normal</fullName>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requires_Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Manager Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sch_End_Date__c</fullName>
        <label>Sch End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sch_Start_Date__c</fullName>
        <label>Sch Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>Case__r.Asset.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <label>Total Expenses</label>
        <summarizedField>Time_Expense_Entry__c.Expense_Entry_Total__c</summarizedField>
        <summaryForeignKey>Time_Expense_Entry__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Time_Costs__c</fullName>
        <label>Total Time Costs</label>
        <summarizedField>Time_Expense_Entry__c.Labor_Charges__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Expense_Entry__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Time</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Expense_Entry__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Work_Order_Costs__c</fullName>
        <formula>Total_Time_Costs__c  +  Total_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Work Order Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Use_Case_Contact_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Case Contact Information?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Date__c</fullName>
        <formula>Case__r.Asset.Warranty_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Order_Status__c</fullName>
        <label>Work Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Work Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Completed_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Work_Order_Status__c</columns>
        <columns>Complete_Date__c</columns>
        <columns>Engineer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Work Orders</label>
    </listViews>
    <listViews>
        <fullName>In_Progress_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Work_Order_Status__c</columns>
        <columns>Complete_Date__c</columns>
        <columns>Engineer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Pending Approval,Approved</value>
        </filters>
        <label>In Progress Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Work_Orders_Pend_Appr</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Engineer__c</columns>
        <columns>Work_Order_Status__c</columns>
        <columns>Complete_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Work Orders Pending Approval</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Work Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>